<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/layoutCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="4">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_general"
            android:padding="8dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/selected_button_bg"
            android:layout_weight="1" />

        <Space
            android:id="@+id/firstSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sport"
            android:padding="8dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/default_button_bg"
            android:layout_weight="1"/>

        <Space
            android:id="@+id/secondSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_economy"
            android:padding="8dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/default_button_bg"
            android:layout_weight="1"/>

        <Space
            android:id="@+id/thirdSpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTechnology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_technology"
            android:padding="8dp"
            android:fontFamily="@font/montserrat"
            android:background="@drawable/default_button_bg"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNews"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        tools:listitem="@layout/item_news"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_fileName="loading.json"
        app:lottie_loop="false"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>